@@ -40,6 +40,8 @@ Version 1.8.3
        should respect all options in FindDlg. (Sup Yut Sum)
 - BUG: Issue #578: resolving types of conflicts
        individually. (Stefan)
+- BUG: Issue #579: UI glitch renaming in tree
+       view in repo browser. (Stefan)
 - NEW: Issue #551: Remember the 'ignore ancestry'
        option. (Stefan)
 - NEW: Issue #552: Tri-State checkbox handling
